  * merged lp:~mvo/software-center/lazr to support gobject
    based wrapper around lazr.restfulclient apps
  * merged lp:~mmcg069/software-center/pathbar-tweaks,
    many thanks
  * merged  lp:~mvo/software-center/appdetails-in-db that
    improve the AppDetails abstraction 
  * merged lp:~mvo/software-center/plugin-support (important
    for the oneconf integration)
  
  [ Gary Lasker ]
  * data/icons/scalable/apps/category-show-all.svg,
    data/icons_unbranded/scalable/apps/category-show-all.svg,
    softwarecenter/view/catview_gtk.py:
    - add custom icon for single-pane dept view "All" button;
      icon created by Dani Planas Armangue, many thanks!
      (LP: #599644)
  * softwarecenter/view/pkgview.py:
    - replace svg icon with png version because the svg version
      has been removed from gnome-icon-theme (LP: #601987)
  * po/POTFILES.in:
    - update to latest set of modules
  * merge lp:~mmcg069/software-center/appdetailsview-gtk, adds
    Matthew McGowan's new gtk-based appdetailsview, many thanks!
    Thanks also to kiwinote and mvo for refactoring for new
    AppDetails class and other changes.  Also fixes LP: #578650.
  * softwarecenter/apt/aptcache.py:
    - tweak timeout value when opening the apt cache
      (LP: #602610) 
  * merge lp:~mmcg069/software-center/appdetailsview-gtk, fixes
    description parsing error for e.g. The Gimp.  Many thanks! 
  * softwarecenter/app.py,
    softwarecenter/view/availablepane.py,
    softwarecenter/view/navhistory.py:
    - navigation history fixes 

 -- Gary Lasker <gary.lasker@canonical.com>  Mon, 12 Jul 2010 23:53:48 -0400

software-center (2.1.4) maverick; urgency=low

  [ Gary Lasker ]
  * softwarecenter/view/availablepane.py:
    - fix error when using the login dialog and
      intermittently while searching (LP: #596443)
  * softwarecenter/app.py,
    softwarecenter/backend/channel.py,
    softwarecenter/view/channelpane.py,
    softwarecenter/view/viewswitcher.py: