@@ -11,6 +11,8 @@ software-center (2.1.5) UNRELEASED; urgency=low
     improve the AppDetails abstraction 
   * merged lp:~mvo/software-center/plugin-support (important
     for the oneconf integration)
+  * merged lp:~osomon/software-center/close_in_progress
+    that fixes LP:#431907, thanks to Olivier Tilloy 
   
   [ Gary Lasker ]
   * data/icons/scalable/apps/category-show-all.svg,
